-
Type:
Bug
-
Status: Closed
-
Priority:
Minor
-
Resolution: Fixed
-
Affects Version/s: 0.9
-
Fix Version/s: 0.9.1
-
Component/s: JavaME - Compiler
-
Labels:None
-
Environment:
NA
-
Patch Info:Patch Available
So say you have a namespace 'com.example', and in this namespace you have constant definitions in multiple files:
Example1.thrift, Example2.thrift
Generating either of these files compiles to com/example/Constants.java
So you cannot have more than one file containing constants in this namespace, as compiling Example2 overrides the code compiled from Example1.
In the regular java codegen the compile paths are different:
Example1.thrift => Example1Constants.java
Example2.thrift => Example2Constants.java
This seems to be the optimal solution as losing code is never good. I've patched the Javame compiler to act the same as the Java compiler (will attach a patch)
- is related to
-
THRIFT-1977 C# compiler should generate constant files prefixed with thrift file name
-
- Closed
-