THRIFT-1996:Constants generation is broken / inconsistent with regular Java generation Client: as3/javame Patch: Matthew Rathbone

Constants file missing program_name_ prefix.